tket2/src/portmatching/snapshots/tket2__portmatching__pattern__tests__pattern_with_copy.snap
---
source: tket2/src/portmatching/pattern.rs
expression: pattern
---
CircuitPattern {
    constraints: {
        IsOpEqual(MatchOp { op_name: "tket2.quantum.Rx", .. })(Op(HugrNodeID { path_from_root: HugrPath([]) })),
        IsOpEqual(MatchOp { op_name: "tket2.quantum.Rx", .. })(Op(HugrNodeID { path_from_root: HugrPath([(Port(Incoming, 0), 0)]) })),
        IsWireSource(OutgoingPort(0))(Op(HugrNodeID { path_from_root: HugrPath([]) }), LinearWire(HugrPortID { node: HugrNodeID { path_from_root: HugrPath([]) }, port: Port(Outgoing, 0) })),
        IsWireSource(OutgoingPort(0))(Op(HugrNodeID { path_from_root: HugrPath([(Port(Incoming, 0), 0)]) }), LinearWire(HugrPortID { node: HugrNodeID { path_from_root: HugrPath([(Port(Incoming, 0), 0)]) }, port: Port(Outgoing, 0) })),
        IsWireSink(IncomingPort(0))(Op(HugrNodeID { path_from_root: HugrPath([]) }), LinearWire(HugrPortID { node: HugrNodeID { path_from_root: HugrPath([(Port(Incoming, 0), 0)]) }, port: Port(Outgoing, 0) })),
        IsWireSink(IncomingPort(0))(Op(HugrNodeID { path_from_root: HugrPath([(Port(Incoming, 0), 0)]) }), LinearWire(HugrPortID { node: HugrNodeID { path_from_root: HugrPath([(Port(Incoming, 0), 0)]) }, port: Port(Incoming, 0) })),
        IsWireSink(IncomingPort(1))(Op(HugrNodeID { path_from_root: HugrPath([]) }), CopyableWire(HugrPortID { node: HugrNodeID { path_from_root: HugrPath([(Port(Incoming, 0), 0)]) }, port: Port(Incoming, 1) })),
        IsWireSink(IncomingPort(1))(Op(HugrNodeID { path_from_root: HugrPath([(Port(Incoming, 0), 0)]) }), CopyableWire(HugrPortID { node: HugrNodeID { path_from_root: HugrPath([(Port(Incoming, 0), 0)]) }, port: Port(Incoming, 1) })),
        IsDistinctFrom { n_other: Reverse(2) }(LinearWire(HugrPortID { node: HugrNodeID { path_from_root: HugrPath([]) }, port: Port(Outgoing, 0) }), LinearWire(HugrPortID { node: HugrNodeID { path_from_root: HugrPath([(Port(Incoming, 0), 0)]) }, port: Port(Incoming, 0) }), LinearWire(HugrPortID { node: HugrNodeID { path_from_root: HugrPath([(Port(Incoming, 0), 0)]) }, port: Port(Outgoing, 0) })),
        IsDistinctFrom { n_other: Reverse(1) }(LinearWire(HugrPortID { node: HugrNodeID { path_from_root: HugrPath([(Port(Incoming, 0), 0)]) }, port: Port(Outgoing, 0) }), LinearWire(HugrPortID { node: HugrNodeID { path_from_root: HugrPath([(Port(Incoming, 0), 0)]) }, port: Port(Incoming, 0) })),
    },
    incoming_wires: [
        HugrPortID {
            node: HugrNodeID {
                path_from_root: HugrPath(
                    [
                        (
                            Port(
                                Incoming,
                                0,
                            ),
                            0,
                        ),
                    ],
                ),
            },
            port: Port(
                Incoming,
                0,
            ),
        },
        HugrPortID {
            node: HugrNodeID {
                path_from_root: HugrPath(
                    [
                        (
                            Port(
                                Incoming,
                                0,
                            ),
                            0,
                        ),
                    ],
                ),
            },
            port: Port(
                Incoming,
                1,
            ),
        },
    ],
    outgoing_wires: [
        HugrPortID {
            node: HugrNodeID {
                path_from_root: HugrPath(
                    [],
                ),
            },
            port: Port(
                Outgoing,
                0,
            ),
        },
    ],
    nodes: [
        HugrNodeID {
            path_from_root: HugrPath(
                [
                    (
                        Port(
                            Incoming,
                            0,
                        ),
                        0,
                    ),
                ],
            ),
        },
        HugrNodeID {
            path_from_root: HugrPath(
                [],
            ),
        },
    ],
}
